--- a/Exception handling/Exception.ipynb
+++ b/Exception handling/Exception.ipynb
@@ -9,7 +9,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exception Hnadling\n",
+    "# Exception Handling\n",
     "Whenever you perform invalid operations in python exception will occur\n",
     "![image.png](attachment:image.png)"
    ]
