--- a/Polymorphism/polymorphism.ipynb
+++ b/Polymorphism/polymorphism.ipynb
@@ -32,12 +32,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "1.Sum of any two sides of triangle must be greater than third"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sum of any two sides of triangle must be greater than third\n",
+    "\n",
     "from dataclasses import dataclass\n",
     "from typing import Union\n",
     "\n"
@@ -50,14 +58,102 @@
    "outputs": [],
    "source": [
     "@dataclass\n",
-    "Class Triangle\n",
-    "\n"
+    "class Triangle:\n",
+    "    a: Union[int, float]\n",
+    "    b: Union[int, float]\n",
+    "    c: Union[int, float]\n",
+    "\n",
+    "    def __post_init__(self):\n",
+    "         error = []\n",
+    "         \n",
+    "        if not isinstance(self.a, (int, float)) or self.a <= 0:\n",
+    "            error.append(\"Side a should be int or float and positive\")\n",
+    "        if not isinstance(self.b, (int, float)) or self.b <= 0:\n",
+    "            error.append(\"Side b should be int or float and positive\")\n",
+    "        if not isinstance(self.c, (int, float)) or self.c <= 0:\n",
+    "            error.append(\"Side c should be integer or float\")\n",
+    "        if not self.is_triangle():\n",
+    "            error.append(\"Sum of any two sides should be greater than third\")\n",
+    "\n",
+    "        if error:\n",
+    "            raise ValueError(\"\\n\".join(error))\n",
+    "\n",
+    "def is_triangle(self):\n",
+    "       if(\n",
+    "          (self.a + self.b > self.c)\n",
+    "            and (self.b + self.c > self.a)\n",
+    "            and (self.c + self.a > self.b)\n",
+    "         ):\n",
+    "            return True\n",
+    "         else:\n",
+    "              return False\n",
+    "       \n",
+    "       def perimeter(self):\n",
+    "         return self.a + self.b + self.c\n",
+    "       def area(self):\n",
+    "             s = self.perimeter() / 2\n",
+    "             return (s * (s - self.a) * (s - self.b) * (s - self.c)) ** (1 / 2)\n",
+    "       \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using above triangle class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Triangle' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m t1 \u001b[38;5;241m=\u001b[39m \u001b[43mTriangle\u001b[49m(\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Triangle' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "t1 = Triangle(3, 4, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
